Spacing fixes :construction:

--- a/src/assets/css/welcome.css
+++ b/src/assets/css/welcome.css
@@ -550,7 +550,7 @@
 
   .mhacks-mid-mission-content{
     margin-top: 10%;
-    margin-left: 15%;
+    margin-left: 20%;
     font-size: 1.4em;
     line-height: 1.67em;
   }
@@ -684,6 +684,7 @@
 
   .mhacks-mid-mission-content{
     font-size: 1.3em;
+    margin-left: 12%;
   }
 
   .mhacks-mid-mission-sec-bg{
@@ -976,7 +977,8 @@
   }
 
   .mhacks-mid-mission-sec-bg{
-    width: 860px;
+    width: 920px;
+    margin-top: -10%;
   }
 
   .mhacks-last-contact-input-header{
@@ -1038,6 +1040,11 @@
     font-size: 1.1em;
     width: 160px;
     height: 45px;
+  }
+  
+  .mhacks-mid-mission-sec-bg{
+    width: 820px;
+    margin-top: -18%;
   }
 }
 
@@ -1105,7 +1112,7 @@
 
   .mhacks-mid-mission-sec-bg{
     width: 760px;
-    margin-top: -5vh;
+    margin-top: -20%;
   }
 
   .mhacks-last-contact-bg{
@@ -1127,6 +1134,10 @@
     margin-right: 18vw;
   }
 
+  .mhacks-mid-header-business{
+    padding-top: 4%;
+  }
+
   .mhacks-mid-content{
     margin-left: 5%;
   }
@@ -1145,6 +1156,7 @@
 
   .mhacks-mid-mission-sec-bg{
     width: 720px;
+    margin-top: -25%;
   }
 
   .mhacks-mid-team-header{
@@ -1160,6 +1172,10 @@
 
   .mhacks-mid-header, .mhacks-mid-header-business{
     font-size: 2.1em;
+  }
+
+  .mhacks-mid-header-business{
+    padding-top: 3%;
   }
 
   .mhacks-mid-bg, .mhacks-mid-bg-business{
@@ -1184,7 +1200,7 @@
 
   .mhacks-mid-mission-sec-bg{
     width: 660px;
-    margin-top: -10vh;
+    margin-top: -30%;
   }
 }
 /* ToDo => Fix Navbar items for 769 and below resolutions. */
